添加实现银行家算法避免死锁的演示
掌握的银行家算法的基本概念，实现了以下三方面的内容：①银行家算法的相关的数据结构；②银行家算法；③安全性检测算法。其中，测试数据来源于：汤小丹，梁红兵等.计算机操作系统（第三版）.西安：西安电子科技大学出版社,2007
P108-111

--- a/banker_algorithm/banker_algorithm.vcxproj
+++ b/banker_algorithm/banker_algorithm.vcxproj
@@ -76,7 +76,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DijkstraBanker.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="DijkstraBanker.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="C:\Users\Andrew Shaw\Desktop\data.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
