--- a/page_replacement_algorithm/page_replacement_algorithm.vcxproj
+++ b/page_replacement_algorithm/page_replacement_algorithm.vcxproj
@@ -62,6 +62,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="pagereplacement.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="pagereplacement.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
