文件混合索引
做了一点简单的更新..

--- a/file_index/file_index.vcxproj
+++ b/file_index/file_index.vcxproj
@@ -62,6 +62,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="MultIndexFCB.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MultIndexFCB.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
